--- a/src/GroupDocs.Annotation.WebForms.csproj
+++ b/src/GroupDocs.Annotation.WebForms.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Products\Annotation\Entity\Web\AnnotationDataEntity.cs" />
     <Compile Include="Products\Annotation\Entity\Web\AnnotationPostedDataEntity.cs" />
     <Compile Include="Products\Annotation\Entity\Web\CommentsEntity.cs" />
+    <Compile Include="Products\Annotation\Entity\Web\PageDataDescriptionEntity.cs" />
     <Compile Include="Products\Annotation\Entity\Web\TextRowEntity.cs" />
     <Compile Include="Products\Annotation\Importer\BaseImporter.cs" />
     <Compile Include="Products\Annotation\Util\AnnotationMapper.cs" />
@@ -253,7 +254,9 @@
     <Compile Include="Products\Common\Config\ServerConfiguration.cs" />
     <Compile Include="Products\Common\Entity\Web\ExceptionEntity.cs" />
     <Compile Include="Products\Common\Entity\Web\FileDescriptionEntity.cs" />
+    <Compile Include="Products\Common\Entity\Web\LoadDocumentEntity.cs" />
     <Compile Include="Products\Common\Entity\Web\LoadedPageEntity.cs" />
+    <Compile Include="Products\Common\Entity\Web\PageDescriptionEntity.cs" />
     <Compile Include="Products\Common\Entity\Web\PostedDataEntity.cs" />
     <Compile Include="Products\Common\Entity\Web\UploadedDocumentEntity.cs" />
     <Compile Include="Products\Common\Resources\Resources.cs" />
