--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ src/Resources/*
 node_modules
 src/package-lock.json
 /src/node 
+src/DocumentSamples
+!src/DocumentSamples/Editor/.gitkeep
+src/Licenses
+!src/Licenses/.gitkeep
+.DS_Store
